--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/about.b2f643c838ac36c1a7f2.css">
+    <link rel="stylesheet" href="./assets/about.147d3ca31c6f95c028a7.css">
 </head>
 
 <body>
@@ -16,8 +16,9 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./index.html" class="header__page header__page_theme_dark">Главная</a>
-                    <a href="./about.html" class="header__page header__page_theme_dark header__page_current">О
+                    <a href="./index.html"
+                        class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
+                    <a href="./about.html" class="header__page header__page_active header__page_active_theme_dark">О
                         проекте</a>
                 </nav>
             </header>
@@ -83,10 +84,85 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
+                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits"
+                        class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub
+                        &gt;</a>
                 </div>
-                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'></div>
-                <a href="" target="_blank"><button class="button button_open-link">Открыть в GitHub</button></a>
+                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="Фото" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="Фото" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="Фото" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="Фото" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="Фото" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                    <div class="carousel-cell">
+                        <p class="commits__date">14 августа, 2019</p>
+                        <div class="commits__about-author">
+                            <img src="" alt="Фото" class="commits__author-photo">
+                            <div class="commits__header">
+                                <h3 class="commits__author-name">Имя</h3>
+                                <p class="commits__author-email">Email</p>
+                            </div>
+                        </div>
+                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
+                            dynamically parsed, and produce output depending on what you type in the abb...</p>
+                    </div>
+                </div>
+                <button class="button button_open-link">Открыть в GitHub</button>
             </div>
         </section>
         <footer class="footer">
@@ -94,15 +170,18 @@
             <ul class="footer__links">
                 <li><a href="./index.html" class="footer__link">Главная</a></li>
                 <li><a href="./about.html" class="footer__link">О проекте</a></li>
-                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a>
+                </li>
             </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
+                            alt="Github icon" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
+                            src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/index.d4a7258cbce8095d4025.js"></script>
+    <script type="module" src="./assets/about.881b3813f7d629dd149f.js"></script>
 </body>
 
 </html>
