Надоело писать на английском

--- a/src/about.html
+++ b/src/about.html
@@ -16,8 +16,9 @@
             <header class="header">
                 <p class="header__logo">NewsAnalyzer</p>
                 <nav class="header__page-links">
-                    <a href="./index.html" class="header__page header__page_theme_dark">Главная</a>
-                    <a href="./about.html" class="header__page header__page_theme_dark header__page_current">О
+                    <a href="./index.html"
+                        class="header__page header__page_not-active header__page_not-active_theme_dark">Главная</a>
+                    <a href="./about.html" class="header__page header__page_active header__page_active_theme_dark">О
                         проекте</a>
                 </nav>
             </header>
@@ -86,7 +87,7 @@
                     <a href="" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
                 <div class="main-carousel"></div>
-                <a href="" target="_blank"><button class="button button_open-link">Открыть в GitHub</button></a>
+                <button class="button button_open-link">Открыть в GitHub</button>
             </div>
         </section>
         <footer class="footer">
