--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,9 @@
       <header class="header">
         <p class="header__logo">NewsAnalyzer</p>
         <nav class="header__page-links">
-          <a href="./index.html" class="header__page header__page_theme_light header__page_current">Главная</a>
-          <a href="./about.html" class="header__page header__page_theme_light">О проекте</a>
+          <a href="./index.html" class="header__page header__page_active header__page_active_theme_light">Главная</a>
+          <a href="./about.html" class="header__page header__page_not-active header__page_not-active_theme_light">О
+            проекте</a>
         </nav>
       </header>
       <div class="section-content">
