Исправил замечания после ревью

--- a/src/about.html
+++ b/src/about.html
@@ -92,7 +92,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -104,7 +104,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -116,7 +116,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -128,7 +128,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -140,7 +140,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -152,7 +152,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
