--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="./assets/index.f6fdb96b9b4d5ee70488.css">
+  <link rel="stylesheet" href="./assets/styles/index.310d4ccf86c6dff71b7d.css">
 </head>
 
 <body>
@@ -111,7 +111,7 @@
       </ul>
     </footer>
   </div>
-  <script type="module" src="./assets/index.922d66422f74b3dbda1f.js"></script>
+  <script type="module" src="./assets/js/index.922d66422f74b3dbda1f.js"></script>
 </body>
 
 </html>
