--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/about.cdfe7ad404db628e5a3e.css">
+    <link rel="stylesheet" href="./assets/styles/about.08cf402c397eb4236fc5.css">
 </head>
 
 <body>
@@ -92,7 +92,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -104,7 +104,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -116,7 +116,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -128,7 +128,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -140,7 +140,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -152,7 +152,7 @@
                     <div class="carousel-cell">
                         <p class="commits__date">14 августа, 2019</p>
                         <div class="commits__about-author">
-                            <img src="" alt="Фото" class="commits__author-photo">
+                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
                             <div class="commits__header">
                                 <h3 class="commits__author-name">Имя</h3>
                                 <p class="commits__author-email">Email</p>
@@ -181,7 +181,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/about.881b3813f7d629dd149f.js"></script>
+    <script type="module" src="./assets/js/about.881b3813f7d629dd149f.js"></script>
 </body>
 
 </html>
