--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/analytics.dc44216cb0a077a89af0.css">
+    <link rel="stylesheet" href="./assets/styles/analytics.dc44216cb0a077a89af0.css">
 </head>
 
 <body>
@@ -98,7 +98,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/analytics.58d83c547b5fd8e3224c.js"></script>
+    <script type="module" src="./assets/js/analytics.58d83c547b5fd8e3224c.js"></script>
 </body>
 
 </html>
