Добавил класс BaseComponent

--- a/src/about.html
+++ b/src/about.html
@@ -84,10 +84,12 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
+                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
                 <div class="main-carousel"></div>
-                <button class="button button_open-link">Открыть в GitHub</button>
+                <form action="https://github.com/EvgeniyL0/NewsAnalyzer/commits" target="_blank">
+                    <button class="button button_open-link">Открыть в GitHub</button>
+                </form>
             </div>
         </section>
         <footer class="footer">
