--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
           прошедшую неделю.</p>
         <form class="search__form" name="search" novalidate>
           <input type="text" class="search__input" name="topic" placeholder="Введите тему новости" required>
-          <button type="submit" class="button button_search" name="search">Искать</button>
+          <button type="submit" class="button button_search" name="submit">Искать</button>
         </form>
       </div>
     </section>
