--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/styles/about.fe0fb296c0fd0b88b66f.css">
+    <link rel="stylesheet" href="./assets/styles/about.f787e1859b07ac80931c.css">
 </head>
 
 <body>
@@ -84,85 +84,12 @@
             <div class="section-content">
                 <div class="section-header">
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
-                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits"
-                        class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub
-                        &gt;</a>
+                    <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
-                <div class="main-carousel" data-flickity='{ "cellAlign": "left", "contain": true }'>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                    <div class="carousel-cell">
-                        <p class="commits__date">14 августа, 2019</p>
-                        <div class="commits__about-author">
-                            <img src="./images/author.jpg" alt="Фото" class="commits__author-photo">
-                            <div class="commits__header">
-                                <h3 class="commits__author-name">Имя</h3>
-                                <p class="commits__author-email">Email</p>
-                            </div>
-                        </div>
-                        <p class="commits__text">With Emmet, you can type CSS-like expressions that can be
-                            dynamically parsed, and produce output depending on what you type in the abb...</p>
-                    </div>
-                </div>
-                <button class="button button_open-link">Открыть в GitHub</button>
+                <div class="main-carousel"></div>
+                <form action="https://github.com/EvgeniyL0/NewsAnalyzer/commits" target="_blank">
+                    <button class="button button_open-link">Открыть в GitHub</button>
+                </form>
             </div>
         </section>
         <footer class="footer">
@@ -170,18 +97,15 @@
             <ul class="footer__links">
                 <li><a href="./index.html" class="footer__link">Главная</a></li>
                 <li><a href="./about.html" class="footer__link">О проекте</a></li>
-                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a>
-                </li>
+                <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
             </ul>
             <ul class="footer__social">
-                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
-                            alt="Github icon" class="footer__social-icon"></a></li>
-                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
-                            src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
+                <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github icon" class="footer__social-icon"></a></li>
+                <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg" alt="Facebook icon" class="footer__social-icon"></a></li>
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/js/about.881b3813f7d629dd149f.js"></script>
+    <script type="module" src="./assets/js/about.b94619e42032965760f1.js"></script>
 </body>
 
 </html>
