--- a/analytics.html
+++ b/analytics.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/styles/analytics.41ed17fb26c0ddd026fd.css">
+    <link rel="stylesheet" href="./assets/styles/analytics.524c9172e451519e181a.css">
 </head>
 
 <body>
@@ -26,9 +26,6 @@
                     <li><a href="./index.html">Главная</a></li>
                     <li>Аналитика</li>
                 </ul>
-                <h1 class="content-title content-title_summary">Вы спросили: </h1>
-                <p class="summary__number-of-news">Новостей за неделю: </p>
-                <p class="summary__number-of-references">Упоминаний в заголовках: </p>
             </div>
         </section>
         <section class="details root__section">
@@ -39,7 +36,7 @@
                         <p class="diagram__column-name">ДАТА</p>
                         <p class="diagram__column-name">КОЛ-ВО УПОМИНАНИЙ</p>
                     </div>
-                    <p class="diagram__month">(АВГУСТ)</p>
+                    <p class="diagram__month"></p>
                     <div class="diagram__scale">
                         <p>0</p>
                         <p>25</p>
@@ -47,34 +44,7 @@
                         <p>75</p>
                         <p>100</p>
                     </div>
-                    <div class="diagram__row diagram__row_first">
-                        <p class="diagram__row-name diagram__row-name_day_1">, пн</p>
-                        <div class="diagram__bar diagram__bar_day_1"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_2">, вт</p>
-                        <div class="diagram__bar diagram__bar_day_2"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_3">, ср</p>
-                        <div class="diagram__bar diagram__bar_day_3"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_4">, чт</p>
-                        <div class="diagram__bar diagram__bar_day_4"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_5">, пт</p>
-                        <div class="diagram__bar diagram__bar_day_5"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_6">, сб</p>
-                        <div class="diagram__bar diagram__bar_day_6"></div>
-                    </div>
-                    <div class="diagram__row">
-                        <p class="diagram__row-name diagram__row-name_day_7">, вс</p>
-                        <div class="diagram__bar diagram__bar_day_7"></div>
-                    </div>
+                    <div class="diagram__chart-area"></div>
                     <div class="diagram__scale">
                         <p>0</p>
                         <p>25</p>
@@ -98,7 +68,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/js/analytics.58d83c547b5fd8e3224c.js"></script>
+    <script type="module" src="./assets/js/analytics.26621b758ae63cca55d1.js"></script>
 </body>
 
 </html>
