Level-2 на ревью

--- a/src/about.html
+++ b/src/about.html
@@ -86,7 +86,10 @@
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
                     <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
-                <div class="main-carousel"></div>
+                <div class="main-carousel">
+                    <h2 class="content-title content-title_commits">Что-то пошло не так...</h2>
+                    <p class="content-subtitle content-subtitle_commits"></p>
+                </div>
                 <form action="https://github.com/EvgeniyL0/NewsAnalyzer/commits" target="_blank">
                     <button class="button button_open-link">Открыть в GitHub</button>
                 </form>
