--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,8 @@
         </div>
         <div class="results__not-found">
           <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
-          <h2 class="content-title content-title_loading">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_loading">К сожалению по вашему запросу ничего не найдено</p>
+          <h2 class="content-title content-title_loading"></h2>
+          <p class="content-subtitle content-subtitle_loading"></p>
         </div>
         <div class="results__wrapper">
           <div class="section-header">
