--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/styles/about.f787e1859b07ac80931c.css">
+    <link rel="stylesheet" href="./assets/styles/about.3065a47e65dd0021da77.css">
 </head>
 
 <body>
@@ -86,7 +86,10 @@
                     <h2 class="content-title content-title_section-header">История коммитов из GitHub</h2>
                     <a href="https://github.com/EvgeniyL0/NewsAnalyzer/commits" class="section-header__link section-header__link_commits" target="_blank">Открыть в GitHub &gt;</a>
                 </div>
-                <div class="main-carousel"></div>
+                <div class="main-carousel">
+                    <h2 class="content-title content-title_commits">Что-то пошло не так...</h2>
+                    <p class="content-subtitle content-subtitle_commits"></p>
+                </div>
                 <form action="https://github.com/EvgeniyL0/NewsAnalyzer/commits" target="_blank">
                     <button class="button button_open-link">Открыть в GitHub</button>
                 </form>
@@ -105,7 +108,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/js/about.b94619e42032965760f1.js"></script>
+    <script type="module" src="./assets/js/about.1b899cb7b9a5d4fc59f5.js"></script>
 </body>
 
 </html>
