--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="./assets/styles/index.9e4729e5c9ba65a2d139.css">
+  <link rel="stylesheet" href="./assets/styles/index.77f260212aad29d5c86c.css">
 </head>
 
 <body>
@@ -41,8 +41,8 @@
         </div>
         <div class="results__not-found">
           <img src="./images/not-found.svg" alt="Не найдено" class="results__not-found-image">
-          <h2 class="content-title content-title_loading">Ничего не найдено</h2>
-          <p class="content-subtitle content-subtitle_loading">К сожалению по вашему запросу ничего не найдено</p>
+          <h2 class="content-title content-title_loading"></h2>
+          <p class="content-subtitle content-subtitle_loading"></p>
         </div>
         <div class="results__wrapper">
           <div class="section-header">
@@ -78,7 +78,7 @@
       </ul>
     </footer>
   </div>
-  <script type="module" src="./assets/js/index.1e54afc9febfe132cdad.js"></script>
+  <script type="module" src="./assets/js/index.04a4df7bf1589a0587ac.js"></script>
 </body>
 
 </html>
