На ревью. Попытка 2

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
         </div>
       </div>
     </section>
+    <button class="button button_up">Наверх</button>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Supersite</p>
       <ul class="footer__links">
