--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="./assets/styles/index.77f260212aad29d5c86c.css">
+  <link rel="stylesheet" href="./assets/styles/index.ac403328913f0462b4ff.css">
 </head>
 
 <body>
@@ -63,6 +63,7 @@
         </div>
       </div>
     </section>
+    <button class="button button_up">Наверх</button>
     <footer class="footer">
       <p class="footer__copyright">&copy; 2020 Supersite</p>
       <ul class="footer__links">
@@ -78,7 +79,7 @@
       </ul>
     </footer>
   </div>
-  <script type="module" src="./assets/js/index.04a4df7bf1589a0587ac.js"></script>
+  <script type="module" src="./assets/js/index.99409238be6c2e4ccaff.js"></script>
 </body>
 
 </html>
