Исправлены замечания после финального ревью

--- a/src/about.html
+++ b/src/about.html
@@ -76,7 +76,13 @@
                 <img src="./images/author.jpg" alt="Фото автора" class="author__photo">
                 <div class="author__about">
                     <h2 class="content-title content-title_author">Об авторе</h2>
-                    <p class="author__about-text">Это блок с описаением автора проекта.</p>
+                    <div class="author__about-text">
+                        <p class="author__text-paragraph">Я Евгений Лобанов - начинающий фронтенд-разработчик.</p>
+                        <p class="author__text-paragraph">Этот сайт - мой дипломный проект в Яндекс.Практикум.</p>
+                        <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил освоить
+                          новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть основными
+                          технологиями и инструментами для создания современных сайтов.</p>
+                      </div>
                 </div>
             </div>
         </section>
