--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,13 @@
         <img src="./images/author.jpg" alt="Фото автора" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
-          <p class="author__about-text">Это блок с описаением автора проекта.</p>
+          <div class="author__about-text">
+            <p class="author__text-paragraph">Я Евгений Лобанов - начинающий фронтенд-разработчик.</p>
+            <p class="author__text-paragraph">Этот сайт - мой дипломный проект в Яндекс.Практикум.</p>
+            <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил освоить
+              новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть основными
+              технологиями и инструментами для создания современных сайтов.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -72,10 +78,10 @@
         <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
       </ul>
       <ul class="footer__social">
-        <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка"
-              class="footer__social-icon"></a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg"
-              alt="Facebook иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
+              alt="Github иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
+              src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </div>
