--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Evgeniy Lobanov">
     <title>NewsAnalyzer</title>
     <link rel="icon" type="image/png" href="./images/favicon.png" />
-    <link rel="stylesheet" href="./assets/styles/about.5409cb693095b4e98f53.css">
+    <link rel="stylesheet" href="./assets/styles/about.c61454c637124c94dde7.css">
 </head>
 
 <body>
@@ -76,7 +76,13 @@
                 <img src="./images/author.jpg" alt="Фото автора" class="author__photo">
                 <div class="author__about">
                     <h2 class="content-title content-title_author">Об авторе</h2>
-                    <p class="author__about-text">Это блок с описаением автора проекта.</p>
+                    <div class="author__about-text">
+                        <p class="author__text-paragraph">Я Евгений Лобанов - начинающий фронтенд-разработчик.</p>
+                        <p class="author__text-paragraph">Этот сайт - мой дипломный проект в Яндекс.Практикум.</p>
+                        <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил освоить
+                          новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть основными
+                          технологиями и инструментами для создания современных сайтов.</p>
+                      </div>
                 </div>
             </div>
         </section>
@@ -108,7 +114,7 @@
             </ul>
         </footer>
     </div>
-    <script type="module" src="./assets/js/about.552c4ac811b2ce8ef605.js"></script>
+    <script type="module" src="./assets/js/about.a78a6e4c944b3088afbb.js"></script>
 </body>
 
 </html>
