--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Evgeniy Lobanov">
   <title>NewsAnalyzer</title>
   <link rel="icon" type="image/png" href="./images/favicon.png" />
-  <link rel="stylesheet" href="./assets/styles/index.ac403328913f0462b4ff.css">
+  <link rel="stylesheet" href="./assets/styles/index.f63126fbcd32f74f9c6e.css">
 </head>
 
 <body>
@@ -59,7 +59,13 @@
         <img src="./images/author.jpg" alt="Фото автора" class="author__photo">
         <div class="author__about">
           <h2 class="content-title content-title_author">Об авторе</h2>
-          <p class="author__about-text">Это блок с описаением автора проекта.</p>
+          <div class="author__about-text">
+            <p class="author__text-paragraph">Я Евгений Лобанов - начинающий фронтенд-разработчик.</p>
+            <p class="author__text-paragraph">Этот сайт - мой дипломный проект в Яндекс.Практикум.</p>
+            <p class="author__text-paragraph">По образованию я инженер-электроник. Семь месяцев назад решил освоить
+              новую профессию и стать фронтендером. Обучение в Яндекс.Практикум помогло мне овладеть основными
+              технологиями и инструментами для создания современных сайтов.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -72,14 +78,14 @@
         <li><a href="https://praktikum.yandex.ru/" class="footer__link" target="_blank">Яндекс.Практикум</a></li>
       </ul>
       <ul class="footer__social">
-        <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg" alt="Github иконка"
-              class="footer__social-icon"></a></li>
-        <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img src="./images/fb-icon.svg"
-              alt="Facebook иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://github.com/EvgeniyL0" target="_blank"><img src="./images/github-icon.svg"
+              alt="Github иконка" class="footer__social-icon"></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100022798724794" target="_blank"><img
+              src="./images/fb-icon.svg" alt="Facebook иконка" class="footer__social-icon"></a></li>
       </ul>
     </footer>
   </div>
-  <script type="module" src="./assets/js/index.99409238be6c2e4ccaff.js"></script>
+  <script type="module" src="./assets/js/index.61aba3ebbeed5e213cf0.js"></script>
 </body>
 
 </html>
